deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lop-ingress
  namespace: life-observability-platform
spec:
  ingressClassName: nginx
  rules:
    - host: 186.177.187.155.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lop-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lop-frontend
                port:
                  number: 3000
